Name:          letters-frp
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2020 Lars Bruenjes
Author:        Lars Bruenjes

library
    exposed-modules:
        Reactive.Banana.Vty
    build-depends:
          base >= 4.8 && < 5
        , reactive-banana
        , vty
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable counter
  hs-source-dirs:      app
  main-is:             counter.hs
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable die
  hs-source-dirs:      app
  main-is:             die.hs
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , random
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable letters
  hs-source-dirs:      app
  main-is:             letters.hs
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , optics
                     , random
                     , reactive-banana
                     , text
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
