Name:          letters-frp
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2020 Lars Bruenjes
Author:        Lars Bruenjes
Maintainer:    brunjlar@gmail.com
data-files:    words.txt
license:       MIT
license-file:  LICENSE

extra-source-files:
    README.md
    stack.yaml

library
    exposed-modules:
        Reactive.Banana.Vty
    build-depends:
          base >= 4.8 && < 5
        , reactive-banana
        , vty
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable counter
  hs-source-dirs:      app
  main-is:             counter.hs
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable counter-banana
  hs-source-dirs:      app
  main-is:             counter-banana.hs
  build-depends:       base >= 4.7 && < 5
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable counter-vty
  hs-source-dirs:      app
  main-is:             counter-vty.hs
  build-depends:       base >= 4.7 && < 5
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable die
  hs-source-dirs:      app
  main-is:             die.hs
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , random
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable hello-vty
  hs-source-dirs:      app
  main-is:             hello-vty.hs
  build-depends:       base >= 4.7 && < 5
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable letters
  hs-source-dirs:      app
  main-is:             letters.hs
  other-modules:       Paths_letters_frp
  autogen-modules:     Paths_letters_frp
  build-depends:       base >= 4.7 && < 5
                     , letters-frp
                     , optics
                     , random
                     , reactive-banana
                     , text
                     , vector
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable meetup
  hs-source-dirs:      app
  main-is:             meetup.hs
  build-depends:       base >= 4.7 && < 5
                     , optics
                     , random
                     , reactive-banana
                     , vty
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
